--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    runtimeOnly 'mysql:mysql-connector-java'
+    runtimeOnly 'org.postgresql:postgresql'
 
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.4'
 
