--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/MoonMarket?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}?serverTimezone=UTC
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-circular-references=true
+server.port=8080
+
+
+
 
 server.servlet.encoding.charset=UTF-8
 
