--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}?serverTimezone=UTC
-spring.datasource.username=${PGUSER}
-spring.datasource.password=${PGPASSWORD}
+spring.datasource.url=jdbc:postgresql://containers-us-west-62.railway.app:6294/railway?serverTimezone=UTC
+spring.datasource.username=postgres
+spring.datasource.password=NixgzodcELRr0vhjJG1Q
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-circular-references=true
